--- a/public/og-image.html
+++ b/public/og-image.html
@@ -71,9 +71,9 @@
     <div class="stars" id="stars"></div>
     <div class="content">
         <div class="logo">🔮</div>
-        <div class="brand">Vrachka</div>
-        <div class="title">AI Хороскопи, Таро и Духовни Насоки</div>
-        <div class="description">Персонализирани дневни хороскопи, таро четения и духовни консултации с AI Врачката</div>
+        <div class="brand">Врачка</div>
+        <div class="title">Хороскопи, Таро и Духовни Насоки</div>
+        <div class="description">Персонализирани дневни хороскопи, таро четения и духовни консултации с Врачката</div>
     </div>
     <div class="footer">www.vrachka.eu</div>
 
